# lvgl_port_gl

./: CMakeLists.txt  lv_conf.h  main.c
porting/: lv_port_disp.c  lv_port_disp.h
